--- a/views/certificate.html
+++ b/views/certificate.html
@@ -27,7 +27,7 @@
     <section id="projects">
     <h1 class="inline-center hl1">CERTIFICATES</h1>
     <br><br>
-    <h1 style="color: white; text-align: center;">Here are my certificates FreeCodeCamp.org</h1>
+    <h1 style="color: white; text-align: center;">Here are my certificates from FreeCodeCamp.org</h1>
     <br><br>
 
 
@@ -36,43 +36,33 @@
     <div class="p-grid">
 
         <div class="p-elem">
-            <img src="css/images/14.jpeg" alt="" />
+            <img src="css/images/17.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Responsive Web Design</h2>
+                <p>This certificate is for the completion of HTML and CSS course...</p>
                 <br>
-                <a class="view" href="https://www.freecodecamp.org/certification/zeus007/quality-assurance-v7" target="_blank">View</a>
-            </div>
-        </div>
-        <div class="p-elem">
-            <img src="css/images/15.jpeg" alt="" />
-            <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
-                <br>
-                <a class="view" href="https://www.freecodecamp.org/certification/zeus007/front-end-development-libraries" target="_blank">View</a>
+                <a class="view" href="https://www.freecodecamp.org/certification/zeus007/responsive-web-design" target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
             <img src="css/images/16.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>JavaScript</h2>
+                <p>This is for the completion of JS and Data Structures...</p>
                 <br>
                 <a class="view" href="https://www.freecodecamp.org/certification/zeus007/javascript-algorithms-and-data-structures" target="_blank">View</a>
             </div>
         </div>
         <div class="p-elem">
-            <img src="css/images/17.jpeg" alt="" />
+            <img src="css/images/15.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Front-End Development Libraries</h2>
+                <p>This is my certificate for my completion of HTML CSS and JS...</p>
                 <br>
-                <a class="view" href="https://www.freecodecamp.org/certification/zeus007/responsive-web-design" target="_blank">View</a>
+                <a class="view" href="https://www.freecodecamp.org/certification/zeus007/front-end-development-libraries" target="_blank">View</a>
             </div>
         </div>
-
-        <!-- <div class="p-elem">
+         <!-- <div class="p-elem">
             <img src="css/images/5.jpeg" alt="" />
             <div class="content">
                 <h2>Tribute Page</h2>
@@ -81,6 +71,15 @@
                 <a class="view" href="/projects/profile-1"target="_blank">View</a>
             </div>
         </div> -->
+        <div class="p-elem">
+            <img src="css/images/14.jpeg" alt="" />
+            <div class="content">
+                <h2>Quality assurance</h2>
+                <p>This is my certification for Quality assurance with Chai...</p>
+                <br>
+                <a class="view" href="https://www.freecodecamp.org/certification/zeus007/quality-assurance-v7" target="_blank">View</a>
+            </div>
+        </div>
 
     </div>
 </section>
