--- a/views/projects.html
+++ b/views/projects.html
@@ -48,8 +48,8 @@
         <div class="p-elem">
             <img src="css/images/2.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Survey Form</h2>
+                <p>This is a suevey form made for my test in freecodecamp for my html and css certifications... </p>
                 <br>
                 <a class="view" href="/projects/survey-form" target="_blank">View</a>
             </div>
@@ -57,8 +57,8 @@
         <div class="p-elem">
             <img src="css/images/3.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Shopping Site</h2>
+                <p>This is a simple online shopping site made with only html and css for free code camp...</p>
                 <br>
                 <a class="view" href="/projects/online-shop" target="_blank">View</a>
             </div>
@@ -66,8 +66,8 @@
         <div class="p-elem">
             <img src="css/images/4.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>JS Document</h2>
+                <p>This is a JavaScript documentation with a side nav bar wit html and css only...</p>
                 <br>
                 <a class="view" href="/projects/document" target="_blank">View</a>
             </div>
@@ -75,8 +75,8 @@
         <div class="p-elem">
             <img src="css/images/5.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Profile</h2>
+                <p>This is my first profile which i tried to make long ago with nothing other than html and css...</p>
                 <br>
                 <a class="view" href="/projects/profile-1"target="_blank">View</a>
             </div>
@@ -92,8 +92,8 @@
         <div class="p-elem">
             <img src="css/images/8.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Random Quote Machine</h2>
+                <p>This is a really intresting react project which i made for giving out good motivational quotes...</p>
                 <br>
                 <a class="view" href="/projects/random-quote-machine"target="_blank">View</a>
             </div>
@@ -101,8 +101,8 @@
         <div class="p-elem">
             <img src="css/images/9.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Markdown Viewer</h2>
+                <p>This is a react project for a markdown previewer which renders in the form of .md file...</p>
                 <br>
                 <a class="view" href="/projects/markeddown"target="_blank">View</a>
             </div>
@@ -110,8 +110,8 @@
         <div class="p-elem">
             <img src="css/images/10.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Drum Machine</h2>
+                <p>This is a react project of a online drum.. Try it out its fun!! This is a really fun thing to play with..</p>
                 <br>
                 <a class="view" href="/projects/drum-machine"target="_blank">View</a>
             </div>
@@ -119,8 +119,8 @@
         <div class="p-elem">
             <img src="css/images/11.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Calculator</h2>
+                <p>This is a react project of a calculator...</p>
                 <br>
                 <a class="view" href="/projects/calculator"target="_blank">View</a>
             </div>
@@ -128,8 +128,8 @@
         <div class="p-elem">
             <img src="css/images/12.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Pomodoro Clock</h2>
+                <p>This is a react project based on a pomodoro clock as a timer but the sound has been removed...</p>
                 <br>
                 <a class="view" href="/projects/pomodoro-clock"target="_blank">View</a>
             </div>
@@ -145,46 +145,51 @@
         <div class="p-elem">
             <img src="css/images/18.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Timestamp Microservice</h2>
+                <p>This is an backend project with NodeJS to make a working timestamp service by giving an input of a date...</p>
                 <br>
                 <a class="view" href="/projects/timestamp-microservice"target="_blank">View</a>
+                <a class="view" target="_blank" href="https://github.com/Meheer17/TIMESTAMP-MICROSERVICE">Github</a>
             </div>
         </div>
         <div class="p-elem">
             <img src="css/images/19.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Head Parser</h2>
+                <p>This backend driven project gives the the details of ur desktop/laptop such as the OS the IP Address and also the browser your using...</p>
                 <br>
                 <a class="view" href="/projects/head-parser"target="_blank">View</a>
+                <a class="view" target="_blank" href="https://github.com/Meheer17/HEADER-PARSER-MS">Github</a>
             </div>
         </div>
         <div class="p-elem">
             <img src="css/images/20.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Url Shortner</h2>
+                <p>This is a backend project which uses MongoDB as its database and stores all the url in the database and redirects us to tht website...</p>
                 <br>
                 <a class="view" href="/projects/url-shortner"target="_blank">View</a>
+                <a class="view" target="_blank" href="https://github.com/Meheer17/URL-SHORTNER">Github</a>
             </div>
         </div>
         <div class="p-elem">
             <img src="css/images/21.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>File Metadata</h2>
+                <p>This project gives the details of the choosen file or given file...</p>
                 <br>
                 <a class="view" href="/projects/file-metadata" target="_blank">View</a>
+                <a class="view" target="_blank" href="https://github.com/Meheer17/File-Metadata-Microservice">Github</a>
             </div>
         </div>
         <div class="p-elem">
             <img src="css/images/22.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Exercise Tracker</h2>
+                <p>This project is one of the largest I've worked on, This stores and gives details of the info we give...</p>
                 <br>
                 <a class="view" href="/projects/excercise-tracker" target="_blank">View</a>
+                <a class="view" target="_blank" href="https://github.com/Meheer17/TRACKER-WORK">Github</a>
             </div>
         </div>
 
@@ -251,8 +256,8 @@
         <div class="p-elem">
             <img src="css/images/6.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Temp Converter</h2>
+                <p>This was a project which i made when i had just learned JS and tried to make a temperature converter...</p>
                 <br>
                 <a class="view" href="/projects/temp-convert"target="_blank">View</a>
             </div>
@@ -260,8 +265,8 @@
         <div class="p-elem">
             <img src="css/images/7.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Tribe Web</h2>
+                <p>I had made this project as one of my english project, Gives info on one of the tribe in India...</p>
                 <br>
                 <a class="view" href="/projects/tribe-web"target="_blank">View</a>
             </div>
@@ -269,8 +274,8 @@
         <div class="p-elem">
             <img src="css/images/13.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>All React Projects</h2>
+                <p>This is a react project with all my react projects from the second section combined as one...</p>
                 <br>
                 <a class="view" href="/projects/all-react"target="_blank">View</a>
             </div>
