--- a/views/certificate.html
+++ b/views/certificate.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="css/images/MJ.png">
+    
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -31,12 +32,12 @@
     <br><br>
 
 
-    <h3  style="color: white;">My Certificates For Most Of My Pages:- </h3>
+    <h3  style="color: white;">My Certificates :- </h3>
     <br><br>
     <div class="p-grid">
 
         <div class="p-elem">
-            <img src="css/images/17.jpeg" alt="" />
+            <img src="css/images/17.jpeg" alt="" /> 
             <div class="content">
                 <h2>Responsive Web Design</h2>
                 <p>This certificate is for the completion of HTML and CSS course...</p>
