--- a/views/projects.html
+++ b/views/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="css/images/MJ.png">
+    
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>   
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -201,48 +202,53 @@
     <div class="p-grid">
 
         <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
+            <img src="css/images/28.jpg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Metric Converter</h2>
+                <p>A simple NodeJs metric converter for various units of measurements...</p>
                 <br>
-                <a class="view" href=""target="_blank">View</a>
+                <a class="view" href="https://METRIC-CONVERTER.sujajana2609.repl.co"target="_blank">View</a>
+                <a class="view" target="_blank" href="https://github.com/Meheer17/METRIC-CONVERTER">Github</a>
             </div>
         </div>
         <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
+            <img src="css/images/25.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Library Project</h2>
+                <p>A library tracker which keeps the info of the books in the library with the comments on them with mongoDB...</p>
                 <br>
-                <a class="view" href=""target="_blank">View</a>
+                <a class="view" href="https://LIBRARY-PROJECT.sujajana2609.repl.co"target="_blank">View</a>
+                <a class="view" target="_blank" href="https://github.com/Meheer17/LIBRARY-PROJECT">Github</a>
             </div>
         </div>
         <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
+            <img src="css/images/24.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Issue Tracker</h2>
+                <p>As the name suggests the issue tracker keeps a track on the issue posted through mongoDB...</p>
                 <br>
-                <a class="view" href=""target="_blank">View</a>
+                <a class="view" href="https://ISSUE-TRACKER.sujajana2609.repl.co"target="_blank">View</a>
+                <a class="view" target="_blank" href="https://github.com/Meheer17/ISSUE-TRACKER">Github</a>
             </div>
         </div>
         <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
+            <img src="css/images/26.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>American British</h2>
+                <p>An translator from/to British and American with NodeJs...</p>
                 <br>
-                <a class="view" href=""target="_blank">View</a>
+                <a class="view" href="https://AMERICAN-BRITISH.sujajana2609.repl.co"target="_blank">View</a>
+                <a class="view" target="_blank" href="https://github.com/Meheer17/AMERICAN-BRITISH">Github</a>
             </div>
         </div>
         <div class="p-elem">
-            <img src="css/images/cool.jpg" alt="" />
+            <img src="css/images/27.jpeg" alt="" />
             <div class="content">
-                <h2>Tribute Page</h2>
-                <p>This was my very first website, This was a website on ABJ Abdul Kalam, One of my inspiration for many things..</p>
+                <h2>Sudoku Solver</h2>
+                <p>Most of us hav played Sudoku its a really fun game, and to solve takes a good amount of time., check this out...</p>
                 <br>
-                <a class="view" href=""target="_blank">View</a>
+                <a class="view" href="https://SUDOKU-SOLVER-1.sujajana2609.repl.co"target="_blank">View</a>
+                <a class="view" target="_blank" href="https://github.com/Meheer17/SUDOKU-SOLVER">Github</a>
             </div>
         </div>
 
@@ -278,6 +284,15 @@
                 <p>This is a react project with all my react projects from the second section combined as one...</p>
                 <br>
                 <a class="view" href="/projects/all-react"target="_blank">View</a>
+            </div>
+        </div>
+        <div class="p-elem">
+            <img src="css/images/23.jpeg" alt="" />
+            <div class="content">
+                <h2>E-Waste Management</h2>
+                <p>This is a project made to show the importance of clearing out ewaste which is produced...</p>
+                <br>
+                <a class="view" href="https://eleganthopefulmisrac.meheer007.repl.co"target="_blank">View</a>
             </div>
         </div>
         
