--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,14 +7,14 @@
 }
 
 html{
-        scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 body{
-        /* background-image:linear-gradient(62deg, #242424 0%, #5c5c5cb9 100%); */
-        background-color:#16161A;
-        font-size: 24px;
-        font-weight: bold;
+    /* background-image:linear-gradient(62deg, #242424 0%, #5c5c5cb9 100%); */
+    background-color:#16161A;
+    font-size: 24px;
+    font-weight: bold;
 }
 
 /* NAVBAR */
@@ -25,8 +25,12 @@ body{
     position: fixed;
     align-items: center;
     z-index: 5;
-    transition:0.3s;
+    transition:1s;
     background-color: transparent;
+}
+#header:hover{
+    background-color: #00a9e2;
+    opacity: 1;
 }
 
 .navbar{
@@ -118,6 +122,9 @@ body{
 
 @media only screen and (max-width: 500px) {
   #gh{height:12px;} /*IGNORE*/
+  *{
+      font-size: 14px;
+  }
    body{
         overflow-x: hidden;
    }
@@ -131,17 +138,20 @@ body{
     }
     .navbar-links{
         display:initial;
-        margin-right: 100px;
+        margin-right: 135px;
+        text-align: center;
     }
     #header{
         height: 80px;
         background-color: rgb(50, 50, 50);
+        font-size: 24px;
     }
     .navbar{
         position: fixed;
         top: 65px;        
         right:0;
-        width:60%;
+        width:100%;
+        font-size: 24px;
         margin-left:30px;
         margin-right:auto;
         height: 100%;
@@ -172,6 +182,10 @@ body{
     transform:translateX(0%);
 }
 
+.nav-show{
+  opacity: 0;
+}
+
 /*Scroll Bar*/
 ::-webkit-scrollbar{
     width:10px;
@@ -199,8 +213,23 @@ body{
     background-size: cover;
     color: white;
 }
-#projects, #abt{
+
+#abt{
     padding: 80px 15px 0 15px;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+#projects{
+    padding: 80px 15px 0 15px;
+    transition:2s;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+.p-show{
+    opacity: 1;
+    margin-right: 0%;
 }
 
 /*Others*/
@@ -384,7 +413,7 @@ a{
     }
     .p-elem{
         width: 100%;
-        height: 320px;
+        height: 270px;
     }
 
 }
