--- a/views/index.html
+++ b/views/index.html
@@ -1,21 +1,39 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="css/images/MJ.png">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     
-    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>   
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <link rel="stylesheet" href="css/main.css" type="text/css">
-    <script src="navbar.js" type="text/babel"></script>
     <script src="index.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>Home</title>
+    <title>Home</title>
 </head>
 <body>
-  <div id="NAVBAR"></div>
+<div id="header">
+	    <div class="circle-logo">
+            <img src="css/images/MJ.png" alt=""/>
+        </div> 
+             <h3><mono style="color: white; text-align: center;">MAHI</mono></h3>
+	    <nav class="navbar">
+	    	<ul class="navbar-links">
+		        <li><a href="/">Home</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li><a href="/certificates">Certificates</a></li>
+		    </ul>
+	    </nav>  
+	    <div class="hamburger">
+			<div class="line1"></div>
+			<div class="line2"></div>
+			<div class="line3"></div>
+	    </div>
+</div>
 
     <section id="welcome">
 
@@ -25,18 +43,18 @@
 
     </section>
 
-    <section id="abt">
+    <section id="abt" data-aos="fade-up">
         <h2 class="inline-center hl1">Profile</h2>
         <div class="container">
 
-            <div class="sub">
+            <div class="sub" data-aos="slide-up">
                 <h2 class="inline-center" style="color: white">About Me!!</h2>
                 <h3>Hello! My name is Meheer, I want to become one of the best Full-Stack Developer. I love to put my self into my codes while I listen to music. My favorite framework as of now is Node.js and make for backend. I'm really good at learning on my own which is really important for a web developer. I've learnt all of my coding from FreeCodeCamp.org on my own and this was really some long way... But it did really worth the time i spent on this. I love to play basketball and handball, And Call Of Duty mobile is my favorite video game and I love watching anime. Thank you for checking my website out, check my github for many more stuff and also my discord to talk to me!!</h3>
             </div>
 
-            <div class="s-grid">
+            <div class="s-grid" data-aos="fade-up">
 
-                <div class="sub2">
+                <div class="sub2" data-aos="slide-right">
                     <h2 class="inline-center" style="color: white">What Have I Learnt? </h2>
                     <ul style="padding-left: 15px;">
                         <li>HTML</li>
@@ -48,15 +66,15 @@
                         <li>GIT</li>
                     </ul>
                 </div>
-                <div class="sub2">
+                <div class="sub2" data-aos="slide-left">
                     <h2 class="inline-center" style="color: white">Teach</h2>
                     <h3 >I would love to teach web development to anyone interested! If you are interested in web development, don't hesitate to call or email me. I can do google meet, and we can go through anything I have listed on this website. You can find my email and phone number in the footer of the page. I am also happy to take a look at any job offers that come my way.</h3>
                 </div>
-                <div class="sub2">
+                <div class="sub2" data-aos="slide-right">
                     <h2 class="inline-center" style="color: white">What I've Worked On</h2>
                     <h3>As a part of all these I had made a few projects for my learning, such as a website for my English project on tribes and also an project on E-Waste Management and a website which is a combination of all my React projects which I'll be showing in the projects section... Be sure to check them out while ur here!!</h3>
                 </div>
-                <div class="sub2">
+                <div class="sub2" data-aos="slide-left">
                     <h2 class="inline-center" style="color: white">Reason For Presenting This</h2>
                     <h3>This is really a very intresting question to answer.... So it all started when I was in 8th grade there were few intresting post on instagram and I found it really good to see, So this was a picture on how to make websites and info how it works and all... I was amazed by it!! and started to </h3>
                 </div>
@@ -74,5 +92,22 @@
     <p class="footItem"><a href="https://github.com/Meheer17" style="text-decoration: none; color: #7f8a9a;" target="_blank"><i class="fab fa-github"></i>  github</a></p>
 </section>
 
+<script>
+    $(window).on('scroll', function(){
+if($(window).scrollTop()){
+  $('#header').addClass('nav-show');
+} else {
+  $('#header').removeClass('nav-show');
+}
+})
+</script>  
+
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+    AOS.init({
+         offset: 120,
+         duration: 1000,
+    });
+</script>
 </body>
 </html>
